# TrackMaster

./: .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.optimized  LICENSE  Makefile  README.md  docker-compose.gitlab.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-original.txt  requirements-slim.txt  setup.py
.github/workflows/: build-and-publish.yml
docs/: cicd-summary.md  docker-optimization.md  github-actions.md  gitlab-cicd.md  reference-track-mastering.md
examples/: client_example.py  client_reference_example.py
scripts/: check_status.sh  compare_docker_sizes.sh  github_actions.sh  run.sh  update_version.sh
src/trackmaster/: __init__.py  api.py  config.py  main.py  mastering.py  utils.py
tests/: __init__.py  test_api.py  test_package.py  test_reference_mastering.py
